# table-to-speech

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
doc/: Overview.drawio
scripts/: file-export.sh  s3-export.sh  ssh_tunnel.sh
src/: main.rs  writer.rs
src/models/: mod.rs  test_table_row.rs
templates/: aws.conf.env.template  connection.conf.env.template  file.export.conf.env.template  s3.export.conf.env.template  ssh.conf.env.template
