[package]
name = "polly_export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-sdk-polly = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"
clap = { version = "4.4.3", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "chrono", "mysql"] }
